# practical-fuzzing

./: .gitignore  README.md  book.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: LinuxHostDocker.md  LinuxHostNoDocker.md  RustBasics.md  Setup.md  Troubleshooting.md  WriteFirstFuzzer.md
first-fuzzer/: Cargo.toml  build.rs
first-fuzzer-solution/: Cargo.toml  Makefile.toml  README.md  build.rs
first-fuzzer-solution/src/: main.rs
first-fuzzer/src/: main.rs
first-target/: Cargo.toml
first-target-solution/: Cargo.toml
first-target/src/: lib.rs
first-target/testcases/: 26c0aa3cb05a20f7  6b47dcc6e8baf69e  6f40a2bea93ee0a3  71fd31f6e02fb1d5  a3ee050a83870a18  e54c970569a44481  e552cbba2b3e2764
src/: README.md  SUMMARY.md
src/development-environments/devcontainer/: README.md  linux.md  windows.md
src/development-environments/virtual-machine/: README.md
src/libafl/fuzzing-c-cpp/: README.md
src/libafl/fuzzing-rust/: README.md  add-a-corpus-entry.md  add-a-harness.md  add-additional-dependencies.md  add-an-argument-parser.md  add-execuor-mutator-and-stages.md  add-executor-mutator-and-stages.md  add-libafl-targets-crate-as-a-dependency-1.md  add-libafl-targets-crate-as-a-dependency.md  add-monitor-event-manager-scheduler-and-fuzzer.md  add-observers-and-feedbacks.md  add-our-observers-and-feedbacks.md  add-random-provider-corpus-solution-corpus-and-state.md  add-the-libafl-crate-as-a-dependency.md  add-the-target-crate-as-a-dependency.md  allocate-some-memory.md  analyzing-the-bug.md  borrowing-mutably-and-immutably.md  cargo-build.md  cargo-run.md  change-the-crate-lib-type.md  choosing-good-fuzz-targets.md  closures.md  corpus.md  coverage-sanitizer.md  fuzzer.md  (+38 more)
(+37 files in other folders)
