[package]
name = "first-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = "0.10.0"
# libafl_targets = { version = "0.10.0", features = [
#     "sancov_pcguard_hitcounts",
#     "sancov_pcguard",
# ] }
first-target-solution = { path = "../first-target-solution" }

# [profile.fuzz]
# inherits = "dev"
# opt-level = 0
# overflow-checks = true
# debug = 2
# strip = false
# lto = "off"
# panic = "abort"
# codegen-units = 1
