[package]
name = "first-target"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libafl_targets = { git = "https://github.com/novafacing/LibAFL.git", branch = "novafacing/sancov-observer", version = "0.10.0", features = [
    "sancov_8bit",
] }
